book/tests/snapshots/snapshot__tests__prql__language-features__s-strings-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from my_table\nselect db_version = s\"version()\"\n"
---
from my_table
select db_version = s"version()"



