book/tests/snapshots/snapshot__tests__prql__language-features__s-strings-4.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nderive [\n  has_valid_title = s\"regexp_contains(title, '([a-z0-9]*-){{2,}}')\"\n]\n"
---
from employees
derive [has_valid_title = s"regexp_contains(title, '([a-z0-9]*-){2,}')"]



