book/tests/snapshots/snapshot__tests__prql__language-features__strings-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from my_table\nselect x = 'hello world'\n"
---
from my_table
select x = "hello world"



