book/tests/snapshots/snapshot__tests__prql__language-features__strings-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "from my_table\nselect x = \"\"\"I said \"hello world\"!\"\"\"\n"
---
from my_table
select x = 'I said "hello world"!'



