book/tests/snapshots/snapshot__tests__prql__language-features__strings-5.prql.snap
---
source: book/tests/snapshot.rs
expression: "from my_table\nselect x = \"\\t\\tline ends here\\n \\\\ \"\n"
---
from my_table
select x = "		line ends here
 \ "



