book/tests/snapshots/snapshot__tests__prql__language-features__switch-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nderive distance = switch [\n  city == \"Calgary\" -> 0,\n  city == \"Edmonton\" -> 300,\n]\n"
---
from employees
derive distance = switch [
  city == "Calgary" => 0
  city == "Edmonton" => 300
]



